Organize, add new code, and add readme

--- a/eeg/full-session/model_explore.ipynb
+++ b/eeg/full-session/model_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "proved-approval",
+   "id": "blind-pharmacy",
    "metadata": {},
    "source": [
     "# Processing all session data and predict subject emotion with LDA"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporate-dancing",
+   "id": "aging-halifax",
    "metadata": {},
    "source": [
     "## Set up"
@@ -18,10 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "imported-glance",
+   "execution_count": 1,
+   "id": "atlantic-fitness",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-k4g1hz_2 because the default path (/home/chc012/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import glob\n",
@@ -45,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "provincial-alignment",
+   "execution_count": 2,
+   "id": "convenient-forth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accredited-wednesday",
+   "id": "organizational-cotton",
    "metadata": {
     "tags": []
    },
@@ -72,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "buried-plenty",
+   "execution_count": 3,
+   "id": "civil-consequence",
    "metadata": {
     "tags": []
    },
@@ -96,17 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "experimental-firmware",
+   "execution_count": 4,
+   "id": "durable-bible",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 3.127345561981201s to finish.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Took %ss to finish.\" % (time.time() - start_time))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "referenced-poker",
+   "id": "occupied-savage",
    "metadata": {},
    "source": [
     "### Get emotion response"
@@ -114,12 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fleet-advantage",
+   "execution_count": 5,
+   "id": "institutional-begin",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Back to directory:  /home/jovyan/mahnob/attended-gaze/full-session\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_path = \"/net2/expData/affective_eeg/mahnob_dataset/Sessions\"\n",
     "meta_data_path = \"session.xml\"\n",
@@ -160,17 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dietary-chance",
+   "execution_count": 6,
+   "id": "absent-elements",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "response_array shape: (527, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"response_array shape:\", np.shape(response_array))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "overall-struggle",
+   "id": "prime-graduation",
    "metadata": {},
    "source": [
     "## 1. Alpha+Beta band & 2.5 sec window"
@@ -178,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "massive-introduction",
+   "execution_count": 7,
+   "id": "aggressive-citizenship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competent-length",
+   "id": "registered-prototype",
    "metadata": {},
    "source": [
     "### Feature extraction"
@@ -198,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defensive-corrections",
+   "id": "comfortable-generator",
    "metadata": {},
    "source": [
     "__Warning: Long run time.__"
@@ -206,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "stable-financing",
+   "execution_count": 8,
+   "id": "arabic-documentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,10 +264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "alert-space",
+   "execution_count": 9,
+   "id": "designed-disclaimer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 19.51746892929077s to finish.\n",
+      "features_list shape: (527, 2, 5, 14)\n",
+      "features_red_dim_list shape: (527, 140)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Took %ss to finish.\" % (time.time() - start_time))\n",
     "print(\"features_list shape:\", np.shape(features_list))\n",
@@ -244,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standard-honey",
+   "id": "editorial-microwave",
    "metadata": {},
    "source": [
     "### Prediction"
@@ -252,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abandoned-realtor",
+   "id": "twenty-twins",
    "metadata": {},
    "source": [
     "#### LDA"
@@ -260,10 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "normal-italian",
+   "execution_count": 10,
+   "id": "integral-trustee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.52830189 0.55660377 0.51428571 0.56190476 0.54285714]\n"
+     ]
+    }
+   ],
    "source": [
     "lda_v = LDA()\n",
     "lda_v_1_scores = cross_val_score(lda_v, features_red_dim_list, response_array[:,0], cv=5)\n",
@@ -272,10 +322,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "educated-basic",
+   "execution_count": 11,
+   "id": "unusual-shift",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.58490566 0.53773585 0.51428571 0.4952381  0.44761905]\n"
+     ]
+    }
+   ],
    "source": [
     "lda_a = LDA()\n",
     "lda_a_1_scores = cross_val_score(lda_a, features_red_dim_list, response_array[:,1], cv=5)\n",
@@ -284,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "covered-madonna",
+   "id": "psychological-ratio",
    "metadata": {},
    "source": [
     "#### SVC"
@@ -292,10 +350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "smaller-rolling",
+   "execution_count": 12,
+   "id": "median-atlas",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.64150943 0.63207547 0.64761905 0.63809524 0.63809524]\n"
+     ]
+    }
+   ],
    "source": [
     "svc_v = SVC()\n",
     "svc_v_1_scores = cross_val_score(svc_v, features_red_dim_list, response_array[:,0], cv=5)\n",
@@ -304,10 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "obvious-sally",
+   "execution_count": 13,
+   "id": "grave-service",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.61320755 0.61320755 0.61904762 0.60952381 0.60952381]\n"
+     ]
+    }
+   ],
    "source": [
     "svc_a = SVC()\n",
     "svc_a_1_scores = cross_val_score(svc_a, features_red_dim_list, response_array[:,1], cv=5)\n",
@@ -316,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plastic-space",
+   "id": "after-account",
    "metadata": {},
    "source": [
     "## 2. Alpha+beta band & 0.5 sec window"
@@ -324,8 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "prescription-volunteer",
+   "execution_count": 14,
+   "id": "relevant-upper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-title",
+   "id": "ambient-review",
    "metadata": {},
    "source": [
     "### Feature extraction"
@@ -344,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certified-boost",
+   "id": "experienced-destruction",
    "metadata": {},
    "source": [
     "__Warning: Long run time.__"
@@ -352,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dress-question",
+   "execution_count": 15,
+   "id": "polish-sucking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,10 +452,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "democratic-cattle",
+   "execution_count": 16,
+   "id": "postal-leave",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Took 13.123753547668457s to finish.\n",
+      "features_list shape: (527, 2, 5, 70)\n",
+      "features_red_dim_list shape: (527, 700)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Took %ss to finish.\" % (time.time() - start_time))\n",
     "print(\"features_list shape:\", np.shape(features_list))\n",
@@ -390,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dietary-tribe",
+   "id": "nuclear-memorabilia",
    "metadata": {},
    "source": [
     "### Prediction"
@@ -398,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "joined-monster",
+   "id": "alleged-direction",
    "metadata": {},
    "source": [
     "#### LDA"
@@ -406,10 +490,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "major-brazilian",
+   "execution_count": 17,
+   "id": "bigger-rescue",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.60377358 0.52830189 0.6        0.53333333 0.59047619]\n"
+     ]
+    }
+   ],
    "source": [
     "lda_v = LDA()\n",
     "lda_v_2_scores = cross_val_score(lda_v, features_red_dim_list, response_array[:,0], cv=5)\n",
@@ -418,10 +510,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eligible-auction",
+   "execution_count": 18,
+   "id": "sorted-drink",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.55660377 0.48113208 0.56190476 0.56190476 0.43809524]\n"
+     ]
+    }
+   ],
    "source": [
     "lda_a = LDA()\n",
     "lda_a_2_scores = cross_val_score(lda_a, features_red_dim_list, response_array[:,1], cv=5)\n",
@@ -430,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respiratory-disclosure",
+   "id": "quarterly-painting",
    "metadata": {},
    "source": [
     "#### SVC"
@@ -438,10 +538,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "irish-robertson",
+   "execution_count": 19,
+   "id": "eleven-perry",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.64150943 0.64150943 0.64761905 0.63809524 0.63809524]\n"
+     ]
+    }
+   ],
    "source": [
     "svc_v = SVC()\n",
     "svc_v_2_scores = cross_val_score(svc_v, features_red_dim_list, response_array[:,0], cv=5)\n",
@@ -450,10 +558,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "neither-leisure",
+   "execution_count": 20,
+   "id": "automated-commitment",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.61320755 0.62264151 0.61904762 0.61904762 0.60952381]\n"
+     ]
+    }
+   ],
    "source": [
     "svc_v = make_pipeline(StandardScaler(), SVC())\n",
     "svc_a_2_scores = cross_val_score(svc_a, features_red_dim_list, response_array[:,1], cv=5)\n",
@@ -462,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "senior-reliance",
+   "id": "daily-certificate",
    "metadata": {},
    "source": [
     "## 3. Alpha+beta+theta band & 2.5 sec window"
@@ -470,8 +586,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "focused-newark",
+   "execution_count": 21,
+   "id": "surprised-easter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prescribed-clear",
+   "id": "minor-holder",
    "metadata": {},
    "source": [
     "### Feature extraction"
@@ -490,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infectious-blink",
+   "id": "vocational-livestock",
    "metadata": {},
    "source": [
     "__Warning: Long run time.__"
@@ -499,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loved-parade",
+   "id": "israeli-chinese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flying-barrier",
+   "id": "generic-representation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "absolute-clock",
+   "id": "thousand-permission",
    "metadata": {},
    "source": [
     "### Prediction"
@@ -544,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuous-reviewer",
+   "id": "earned-commercial",
    "metadata": {},
    "source": [
     "#### LDA"
@@ -553,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boxed-primary",
+   "id": "compliant-writing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "announced-norfolk",
+   "id": "israeli-synthetic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-polyester",
+   "id": "familiar-universal",
    "metadata": {},
    "source": [
     "#### SVC"
@@ -585,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "after-blade",
+   "id": "seasonal-sister",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decreased-verification",
+   "id": "stupid-cylinder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developed-wiring",
+   "id": "advance-messaging",
    "metadata": {},
    "source": [
     "## 4. Alpha+beta band & 2.5 sec window & more frontal channel"
@@ -617,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "functioning-yellow",
+   "id": "acquired-event",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pending-latter",
+   "id": "large-cooking",
    "metadata": {},
    "source": [
     "### Feature extraction"
@@ -636,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "precise-thesaurus",
+   "id": "hearing-planet",
    "metadata": {},
    "source": [
     "__Warning: Long run time.__"
@@ -645,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cross-stock",
+   "id": "closing-witch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "derived-visibility",
+   "id": "efficient-atlas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +798,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "premium-boards",
+   "id": "acting-judgment",
    "metadata": {},
    "source": [
     "### Prediction"
@@ -690,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-guidance",
+   "id": "bacterial-proportion",
    "metadata": {},
    "source": [
     "#### LDA"
@@ -699,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worst-oregon",
+   "id": "parliamentary-balance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executive-guess",
+   "id": "unlimited-chosen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confidential-pacific",
+   "id": "invalid-jesus",
    "metadata": {},
    "source": [
     "#### SVC"
@@ -731,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "essential-virtue",
+   "id": "macro-strand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "associate-attraction",
+   "id": "signal-group",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "popular-training",
+   "id": "framed-history",
    "metadata": {},
    "source": [
     "## Evaluation"
@@ -762,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-copying",
+   "id": "sacred-marking",
    "metadata": {},
    "source": [
     "The four models:\n",
@@ -774,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "national-quebec",
+   "id": "precious-dialogue",
    "metadata": {},
    "source": [
     "### Valence"
@@ -783,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compound-external",
+   "id": "historical-three",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "israeli-ontario",
+   "id": "herbal-johns",
    "metadata": {},
    "source": [
     "### Arousal"
@@ -827,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "about-centre",
+   "id": "composite-rates",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amended-disease",
+   "id": "magnetic-berkeley",
    "metadata": {},
    "outputs": [],
    "source": []
